--- a/blockelement.html
+++ b/blockelement.html
@@ -59,14 +59,13 @@
       margin-right: 10px;
       margin-bottom: 10px;
     }
-
     .float::after {
       content: "";
       display: block;
       clear: both;
     }
     body {
-      background-color: #bcb88a;
+      background-color: #908abc;
     }
   </style>
 </head>
